main.css
body {
    background-image: url("./img/paper-texture.jpg");
    background-repeat: repeat;
}

button {
    margin-top: 10px;
    height: 64px;
    width: 100%;
}

button:hover {
    cursor: pointer;
}

#dice {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

#label {
    margin-bottom: 0;
    max-width: 700px;
    margin-right: auto;
    margin-left: auto;
}

#roll-area {
    display: flex;
    flex-direction: column;
}

#selected-dice {
    display: flex;
    flex-wrap: wrap;
    min-height: 64px;
    border: 2px solid black;
    max-width: 700px;
    margin-right: auto;
    margin-left: auto;
}

.button-group {
    margin: 10px 0;
    padding: 0;
    display: flex;
    flex-direction: column;
}

@media screen and (min-width: 767px) {
    .button-group {
        flex-direction: row;
        max-width: 400px;
        margin-left: auto;
        margin-right: auto;
    }

    .button-group > button {
        margin-right: 10px;
        margin-left: 10px;
    }
}

.left {
    text-align: left;
}

.die {
    height: 64px;
    width: 64px;
    margin: 10px;
    border: 2px solid black;
    border-radius: 5px;
}

.die:hover {
    cursor: pointer;
}

.die > p {
    color: white;
    font-size: 1.4rem;
    font-weight: bold;
    margin: 5px;
    overflow-wrap: break-word;
    line-height: 1.3;
}

.die.bg-yellow > p {
    color: black;
}

.bg-blue {
    background-color: blue;
}

.bg-red {
    background-color: red;
}

.bg-yellow {
    background-color: yellow;
}

.bg-green {
    background-color: green;
}

.bg-brown {
    background-color: #B24816;
}

.bg-gray {
    background-color: gray;
}

.bg-black {
    background-color: #222;
}

